# SmartOrderManager

./: CMakeLists.txt
ObjetMetier/: Chauffeur.cpp  Chauffeur.h  Colis.h  Dispatcher.cpp  Dispatcher.h  Personne.cpp  Personne.h  Trajet.cpp
src/Model/: Admin.cpp  Admin.h  Chauffeur.h  Colis.h  Dispatcher.h  Trajet.h
src/Model/Autre/: Colis.cpp  Colis.h  Trajet.cpp  Trajet.h
src/Model/Personne/: Admin.cpp  Admin.h  Chauffeur.cpp  Chauffeur.h  Dispatcher.cpp  Dispatcher.h  Personne.cpp  Personne.h
